--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css"
+    <link rel="stylesheet" href="src/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
 </head>
 <body>
@@ -12,8 +14,8 @@
         <p>
           This project was coded by
           <a href="https://github.com/Sarffk17" target="_blank">Kelly Sarff</a> and is
-          <a href="https://github.com/Sarffk17/SheCodes_Weather_App" target="_blank"> on GitHub</a> and
-          <a href="https://shecodesweatherapphw6.netlify.app/" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Sarffk17/World-Clock-SC" target="_blank"> on GitHub</a> and
+          <a href="https://world-wide-clock.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
     </footer>
     <script src="src/script.js"></script>    
