--- a/index.html
+++ b/index.html
@@ -9,15 +9,27 @@
     <title>World Clock</title>
 </head>
 <body>
-    <h1>World Clock</h1>
-    <footer>
-        <p>
-          This project was coded by
-          <a href="https://github.com/Sarffk17" target="_blank">Kelly Sarff</a> and is
-          <a href="https://github.com/Sarffk17/World-Clock-SC" target="_blank"> on GitHub</a> and
-          <a href="https://world-wide-clock.netlify.app/" target="_blank">hosted on Netlify</a>
-        </p>
-    </footer>
-    <script src="src/script.js"></script>    
+    <div class="container">
+        <h1>World Clock</h1>
+
+        <select>
+            <option value="">Select a city</option>
+            <option value="">Milwaukee</option>
+            <option value="">Dublin</option>
+            <option value="">Dubia</option>
+            <option value="">Moscow</option>
+        </select>
+
+    </div>    
+        <footer>
+            <p>
+            This project was coded by
+            <a href="https://github.com/Sarffk17" target="_blank">Kelly Sarff</a> and is
+            <a href="https://github.com/Sarffk17/World-Clock-SC" target="_blank"> on GitHub</a> and
+            <a href="https://world-wide-clock.netlify.app/" target="_blank">hosted on Netlify</a>
+            </p>
+        </footer>
+        <script src="src/script.js"></script>    
+    
 </body>
 </html>
