Added a layout for one city, below the drop down.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <option value="">Moscow</option>
         </select>
 
+    <div class="city">
+        <h2>Milwaukee</h2>
+        <div class="date">July 21st 2024 </div>
+        <div class="time">7:16:15 AM</div>
+    </div>
     </div>    
         <footer>
             <p>
