--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
         <div class="date">July 21st 2024 </div>
         <div class="time">7:16:15 AM</div>
     </div>
+    <div class="city">
+        <h2>Dublin</h2>
+        <div class="date">July 21st 2024 </div>
+        <div class="time">7:16:15 AM</div>
+    </div>
+    <div class="city">
+        <h2>Dubia</h2>
+        <div class="date">July 21st 2024 </div>
+        <div class="time">7:16:15 AM</div>
+    </div>
+    <div class="city">
+        <h2>Moscow</h2>
+        <div class="date">July 21st 2024 </div>
+        <div class="time">7:16:15 AM</div>
+    </div>
     </div>    
         <footer>
             <p>
