--- a/index.html
+++ b/index.html
@@ -21,25 +21,34 @@
         </select>
 
     <div class="city">
-        <h2>Milwaukee</h2>
-        <div class="date">July 21st 2024 </div>
-        <div class="time">7:16:15 AM</div>
+        <div>
+            <h2>Milwaukee</h2>
+            <div class="date">July 21st 2024 </div>
+        </div>
+    <div class="time">7:16:15 <small>AM</small></div>
     </div>
     <div class="city">
-        <h2>Dublin</h2>
-        <div class="date">July 21st 2024 </div>
-        <div class="time">7:16:15 AM</div>
+        <div>
+            <h2>Dublin</h2>
+            <div class="date">July 21st 2024 </div>
+        </div>
+    <div class="time">7:16:15 <small>AM</small></div>
     </div>
     <div class="city">
-        <h2>Dubia</h2>
-        <div class="date">July 21st 2024 </div>
-        <div class="time">7:16:15 AM</div>
+        <div>
+            <h2>Dubia</h2>
+            <div class="date">July 21st 2024 </div>
+        </div>
+    <div class="time">7:16:15 <small>AM</small></div>
     </div>
     <div class="city">
-        <h2>Moscow</h2>
-        <div class="date">July 21st 2024 </div>
-        <div class="time">7:16:15 AM</div>
+        <div>
+            <h2>Moscow</h2>
+            <div class="date">July 21st 2024 </div>
+        </div>
+    <div class="time">7:16:15 <small>AM</small></div>
     </div>
+    
     </div>    
         <footer>
             <p>
