--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
             <option value="">Moscow</option>
         </select>
 
-    <div class="city">
+    <div class="city" id="milwaukee">
         <div>
             <h2>Milwaukee</h2>
             <div class="date">July 21st 2024 </div>
         </div>
     <div class="time">7:16:15 <small>AM</small></div>
     </div>
-    <div class="city">
+    <div class="city" id="dublin">
         <div>
             <h2>Dublin</h2>
             <div class="date">July 21st 2024 </div>
         </div>
     <div class="time">7:16:15 <small>AM</small></div>
     </div>
-    <div class="city">
+    <div class="city" id="dubia">
         <div>
             <h2>Dubia</h2>
             <div class="date">July 21st 2024 </div>
         </div>
     <div class="time">7:16:15 <small>AM</small></div>
     </div>
-    <div class="city">
+    <div class="city" id="moscow">
         <div>
             <h2>Moscow</h2>
             <div class="date">July 21st 2024 </div>
