--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </div>
     <div class="time">7:16:15 <small>AM</small></div>
     </div>
-    <div class="city" id="dubia">
+    <div class="city" id="dubai">
         <div>
-            <h2>Dubia</h2>
+            <h2>Dubai</h2>
             <div class="date">July 21st 2024 </div>
         </div>
     <div class="time">7:16:15 <small>AM</small></div>
