--- a/index.html
+++ b/index.html
@@ -12,43 +12,45 @@
     <div class="container">
         <h1>World Clock</h1>
 
-        <select>
+        <select id="city">
             <option value="">Select a city</option>
-            <option value="">Milwaukee</option>
-            <option value="">Dublin</option>
-            <option value="">Dubia</option>
-            <option value="">Moscow</option>
+            <option value="US/Central">Milwaukee</option>
+            <option value="Europe/Dublin">Dublin</option>
+            <option value="Asia/Dubai">Dubia</option>
+            <option value="Europe/Moscow">Moscow</option>
         </select>
-
-    <div class="city" id="milwaukee">
-        <div>
-            <h2>Milwaukee</h2>
-            <div class="date">July 21st 2024 </div>
-        </div>
-    <div class="time">7:16:15 <small>AM</small></div>
-    </div>
-    <div class="city" id="dublin">
-        <div>
-            <h2>Dublin</h2>
-            <div class="date">July 21st 2024 </div>
-        </div>
-    <div class="time">7:16:15 <small>AM</small></div>
-    </div>
-    <div class="city" id="dubai">
-        <div>
-            <h2>Dubai</h2>
-            <div class="date">July 21st 2024 </div>
-        </div>
-    <div class="time">7:16:15 <small>AM</small></div>
-    </div>
-    <div class="city" id="moscow">
-        <div>
-            <h2>Moscow</h2>
-            <div class="date">July 21st 2024 </div>
-        </div>
-    <div class="time">7:16:15 <small>AM</small></div>
-    </div>
     
+    <div id="cities">
+        <div class="city" id="milwaukee">
+            <div>
+                <h2>Milwaukee</h2>
+                <div class="date">July 21st 2024 </div>
+            </div>
+        <div class="time">7:16:15 <small>AM</small></div>
+        </div>
+        <div class="city" id="dublin">
+            <div>
+                <h2>Dublin</h2>
+                <div class="date">July 21st 2024 </div>
+            </div>
+        <div class="time">7:16:15 <small>AM</small></div>
+        </div>
+        <div class="city" id="dubai">
+            <div>
+                <h2>Dubai</h2>
+                <div class="date">July 21st 2024 </div>
+            </div>
+        <div class="time">7:16:15 <small>AM</small></div>
+        </div>
+        <div class="city" id="moscow">
+            <div>
+                <h2>Moscow</h2>
+                <div class="date">July 21st 2024 </div>
+            </div>
+        <div class="time">7:16:15 <small>AM</small></div>
+        </div>
+    </div>
+
     </div>    
         <footer>
             <p>
