--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
         <select id="city">
             <option value="">Select a city</option>
-            <option value="US/Central">Milwaukee</option>
+            <option value="current">My Location</option>
+            <option value="US/Milwaukee">Milwaukee</option>
             <option value="Europe/Dublin">Dublin</option>
             <option value="Asia/Dubai">Dubia</option>
             <option value="Europe/Moscow">Moscow</option>
